--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<section class="flex flex-col w-full h-full">
+  <div class="flex w-full h-full justify-center items-center">
+    <div class="flex flex-col justify-center items-center w-2/3 gap-10 mt-20">
+      <h2 class="text-2xl font-bold">{{name}}</h2>
+      <h3 class="text-xl font-medium">{{introduction}}</h3>
+      <p class="text-justify w-3/4">{{description}}</p>
+    </div>
+  </div>
+</section>
