--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,5 +3,8 @@
 @tailwind utilities;
 
 body {
-  background-color: #9ca48d;
+  // background-color: #9ca48d;
+  background-color: #ded9d5;
 }
+
+// old bg navbar bg-[#596551]
