--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,15 @@
 body {
   // background-color: #9ca48d;
   background-color: #ded9d5;
+  font-family: "Lora", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+.headerName {
+  font-family: "Great Vibes", cursive;
+  font-weight: 400;
+  font-style: normal;
 }
 
 // old bg navbar bg-[#596551]
