--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,13 +1,34 @@
-<section class=" h-20 fixed w-full flex bg-[#9CA48D] px-10 gap-20 text-black items-center justify-around">
-  <div class="flex items-center w-3/4 h-full headerName text-4xl max-w-72">
+<section class="z-10 h-20 fixed w-full flex bg-[#9CA48D] px-10 text-black items-center justify-between">
+  <div class="flex items-center headerName text-4xl max-w-80 w-full">
     {{headerName}}
   </div>
-  <div class="flex items-center h-full w-full text-lg font-semibold justify-end">
+  <div class="hidden lg:flex items-center h-full text-lg font-semibold justify-end w-full">
     <div class="flex items-center h-full gap-6">
-      @for (element of navElements; track $index) {
-        <a [routerLink]="element.link" class="hover:text-white">
-          {{ element.name }}</a>
-      }
+      <ng-container *ngFor="let element of navElements">
+        <a href="{{element.link}}" class="hover:text-white">{{ element.name }}</a>
+      </ng-container>
     </div>
   </div>
+  <div class="flex lg:hidden items-center">
+    <button (click)="toggleMenu()" class="focus:outline-none">
+      <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+      </svg>
+    </button>
+  </div>
 </section>
+
+<div *ngIf="menuOpen" class="fixed inset-0 bg-[#9CA48D] z-20 flex flex-col items-center justify-start pt-8 h-full lg:hidden">
+  <div class="flex w-full justify-end pr-10">
+    <button (click)="toggleMenu()" class="focus:outline-none">
+      <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+      </svg>
+    </button>
+  </div>
+  <div class="flex flex-col items-center gap-6 mt-10">
+    <ng-container *ngFor="let element of navElements">
+      <a href="{{element.link}}" class="text-lg font-semibold hover:text-white" (click)="toggleMenu()">{{ element.name }}</a>
+    </ng-container>
+  </div>
+</div>
