--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,10 @@ body {
   font-style: normal;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .headerName {
   font-family: "Great Vibes", cursive;
   font-weight: 400;
