--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,10 @@
-<section class="flex flex-col w-full h-full">
+<section class="flex flex-col w-full h-full z-10">
 
   <div class="flex w-full h-screen justify-center items-center bg-[#9CA48D] md:pb-20" id="home">
     <div class="flex flex-col justify-center items-center w-full gap-10 bg-[#ded9d5] h-[90%] textured-background">
-      <h2 class="text-6xl font-bold tracking-tight headerName">{{name}}</h2>
+      <h2 class="text-4xl md:text-6xl font-bold tracking-tight headerName">{{name}}</h2>
       <h3 class="text-xl font-medium">{{introduction}}</h3>
-      <img src="{{homeImg}}" alt="" width="500px" height="400px" class="z-100 object-none">
+      <img src="{{homeImg}}" alt="" width="500px" height="400px" class="z-100 object-contain md:object-none">
     </div>
   </div>
 
@@ -49,7 +49,7 @@
     <div class="mx-auto max-w-8xl text-center h-full md:h-[550px]">
       <h2 class="text-2xl font-bold tracking-tight sm:text-2xl pt-5">{{info}}</h2>
       <div class="mt-8 text-lg leading-8 text-justify bloc md:flex gap-10 justify-center max-w-6xl m-auto h-[80%]">
-        <div class=" w-full md:w-1/2 m-auto z-0">
+        <div class="w-full md:w-1/2 m-auto z-[-1]">
            <app-map></app-map>
         </div>
         <div class="w-full md:w-1/2 bg-[white] rounded-xl">
