--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
 
   <div class="flex w-full h-screen justify-center items-center bg-[#9CA48D] md:pb-20" id="home">
     <div class="flex flex-col justify-center items-center w-full gap-10 bg-[#ded9d5] h-[90%] textured-background">
-      <h2 class="text-4xl md:text-6xl font-bold tracking-tight headerName">{{name}}</h2>
+      <h2 class="text-4xl md:text-6xl font-bold tracking-tight headerName2">{{name}}</h2>
       <h3 class="text-xl font-medium">{{introduction}}</h3>
       <img src="{{homeImg}}" alt="" width="500px" height="400px" class="z-100 object-contain md:object-none">
     </div>
@@ -45,19 +45,44 @@
     </div>
   </div>
 
-  <div class="px-6 py-24 sm:py-32 lg:px-8 bg-[#9ca48d60] h-full md:h-screen" id="infos">
-    <div class="mx-auto max-w-8xl text-center h-full md:h-[550px]">
+  <div class="px-6 py-20 sm:py-28 lg:px-8 bg-[#9ca48d60] h-full md:h-screen" id="infos">
+    <div class="mx-auto max-w-8xl text-center h-full">
       <h2 class="text-2xl font-bold tracking-tight sm:text-2xl pt-5">{{info}}</h2>
-      <div class="mt-8 text-lg leading-8 text-justify bloc md:flex gap-10 justify-center max-w-6xl m-auto h-[80%]">
+      <div class="mt-8 text-lg leading-8 text-justify bloc md:flex gap-10 justify-center max-w-8xl m-auto h-full">
         <div class="w-full md:w-1/2 m-auto z-[-1]">
            <app-map></app-map>
         </div>
-        <div class="w-full md:w-1/2 bg-[white] rounded-xl">
-          @for (element of infos; track $index) {
-            <p class="text-justify text-[#596551] mx-4 my-4">
-            {{element.name}} : {{element.element}} <br>
-          </p>
-          }
+        <div class="w-full md:w-1/2 bg-[white] rounded-xl flex flex-col">
+          <div class="w-[95%] m-auto flex flex-col gap-1">
+            <p><span class="font-bold">Email: </span>{{ infos.email }}</p>
+            <p><span class="font-bold">Telephone: </span>{{ infos.telephone }}</p>
+            <p><span class="font-bold">Adresse:</span> {{ infos.adresse }}</p>
+
+            <h2 class="font-bold">Accéder au cabinet</h2>
+            <p><span class="font-bold">Metro:</span> {{ infos.accederAuCabinet.metro }}</p>
+            <div class="flex gap-4">
+              <p><span class="font-bold">Bus:</span></p>
+              @for (bus of infos.accederAuCabinet.bus; track $index) {
+                <p class="flex">{{ bus }}</p>
+              }
+            </div>
+            <h2 class="font-bold">Tarifs</h2>
+            <p><span>Psychothérapie de soutien:</span> {{ infos.tarifs.psychotherapieDeSoutien }}</p>
+            <p><span>Psychanalyse:</span> {{ infos.tarifs.psychanalyse }}</p>
+            <p>{{ infos.tarifs.note }}</p>
+
+            <div class="flex gap-1">
+              <h2 class="font-bold">Durée de la séance :</h2>
+              <p>{{ infos.dureeDeLaSeance }}</p>
+            </div>
+
+            <div class="flex gap-1">
+              <h2 class="font-bold">Mode de règlement :</h2>
+              @for (mode of infos.modeDeReglement; track $index) {
+                <p>{{ mode }}</p>
+              }
+            </div>
+          </div>
         </div>
       </div>
     </div>
