--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,6 @@
 @tailwind utilities;
 
 body {
-  // background-color: #9ca48d;
   background-color: #ded9d5;
   font-family: "Lora", serif;
   font-optical-sizing: auto;
@@ -20,4 +19,15 @@ html {
   font-style: normal;
 }
 
-// old bg navbar bg-[#596551]
+@font-face {
+  font-family: 'zenithCp';
+  src: url('./assets/fonts/zenith.otf') format('otf');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.headerName2 {
+  font-family: 'zenithCp', cursive!important;
+  font-weight: 400;
+  font-style: normal;
+}
