--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,25 +8,32 @@
     </div>
   </div>
 
-  <div class="px-6 lg:px-8 bg-[#9CA48D] h-full md:h-screen" id="therapy">
-    <div class="mx-auto max-w-7xl text-center">
-      <h2 class="text-2xl ml-40 font-bold tracking-tight sm:text-3xl">{{psyTitle}}</h2>
-      <div class="mt-8 text-lg leading-8 text-justify bloc md:flex gap-10 justify-center">
-        <div class="w-full md:w-1/2 m-auto">
-          <img src="{{officeImg}}" alt="office" class="rounded-xl">
+  <!-- New Therapy section -->
+  <div class="overflow-hidden bg-[#9CA48D] py-16">
+    <div class="mx-auto max-w-7xl px-4 lg:px-6">
+      <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2">
+        <div class="lg:ml-auto lg:pl-4 lg:pt-4 w-full">
+          <div class="w-full">
+            <p class="mt-2 text-3xl font-bold tracking-tight text-black sm:text-4xl">{{psyTitle}}</p>
+            <div class="w-full md:w-full bg-[#474747] rounded-xl">
+              <p class="mt-6 text-lg leading-8 text-white w-[95%] m-auto flex text-justify h-full">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque sint omnis ullam provident, error pariatur eum numquam repudiandae sapiente. Aspernatur, ducimus. Ullam amet hic quas et! Aliquid quo ullam culpa.
+                Aliquid debitis facere nulla, quo commodi magni, consequuntur esse alias fugiat mollitia quis provident repellat odit totam velit eligendi. Aut assumenda eligendi voluptatem magni ullam tempore laudantium ad possimus et.
+                Natus facere dolorum error dolor cupiditate sint fuga et incidunt, sed ut harum repellendus nulla ex ipsa quod sit! Culpa maxime magnam repudiandae cum eveniet aspernatur accusamus neque hic saepe?
+                Animi quia accusantium aliquam ipsa nihil adipisci officia, illum quas corporis rerum quibusdam, voluptatem consequuntur, vel qui explicabo cupiditate. Natus ipsum delectus illum culpa adipisci, nostrum doloribus optio architecto voluptates.
+                Animi quia accusantium aliquam ipsa nihil adipisci officia, illum quas corporis rerum quibusdam,.
+              </p>
+            </div>
+          </div>
         </div>
-        <div class="w-full md:w-1/2 bg-[#474747] rounded-xl">
-          <p class="text-justify text-white mx-4 my-4">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque sint omnis ullam provident, error pariatur eum numquam repudiandae sapiente. Aspernatur, ducimus. Ullam amet hic quas et! Aliquid quo ullam culpa.
-            Aliquid debitis facere nulla, quo commodi magni, consequuntur esse alias fugiat mollitia quis provident repellat odit totam velit eligendi. Aut assumenda eligendi voluptatem magni ullam tempore laudantium ad possimus et.
-            Natus facere dolorum error dolor cupiditate sint fuga et incidunt, sed ut harum repellendus nulla ex ipsa quod sit! Culpa maxime magnam repudiandae cum eveniet aspernatur accusamus neque hic saepe?
-            Animi quia accusantium aliquam ipsa nihil adipisci officia, illum quas corporis rerum quibusdam, voluptatem consequuntur, vel qui explicabo cupiditate. Natus ipsum delectus illum culpa adipisci, nostrum doloribus optio architecto voluptates.
-          </p>
+        <div class="flex items-start justify-end lg:order-first">
+          <img src="{{officeImg}}" alt="Product screenshot" class="w-[48rem] max-w-none rounded-xl shadow-xl ring-1 ring-gray-400/10 sm:w-[57rem]" width="2432" height="1442">
         </div>
       </div>
     </div>
   </div>
 
+<!-- Therapyst section to delete -->
   <div class="px-6 lg:px-8 bg-[#9ca48d96] h-full md:h-screen" id="psy">
     <div class="mx-auto max-w-8xl text-center bg-[#F0ECE9] h-full md:h-[550px]">
       <h2 class="text-2xl font-bold tracking-tight sm:text-3xl mr-72 pt-5">{{therapyst}}</h2>
@@ -44,6 +51,28 @@
       </div>
     </div>
   </div>
+
+  <!-- New therapyst section -->
+  <div class="overflow-hidden bg-[#9ca48d96] py-24 sm:py-32 h-full">
+    <div class="mx-auto max-w-7xl md:px-6 bg-[#F0ECE9] w-[95%] m-auto h-full">
+      <div class="grid grid-cols-1 gap-x-8 gap-y-16 lg:grid-cols lg:items-start">
+        <div class="px-6 md:px-0 lg:pr-4 lg:pt-4">
+          <div class="mx-auto max-w-2xl lg:mx-0 lg:max-w-lg">
+            <p class="mt-2 text-3xl font-bold tracking-tight text-black sm:text-4xl">{{therapyst}}</p>
+            <p class="mt-6 text-lg leading-8 text-gray-600 text-justify">
+              Je suis psychanalyste, formée au sein de la Fédération Freudienne de Psychanalyse (FFDP)  pendant cinq ans. Cet apprentissage, à la fois théorique et pratique, a été complété par une psychanalyse personnelle et didactique de plusieurs années. Mon activité est supervisée par un psychanalyste de la FFDP, garantissant ainsi le respect du code déontologique.
+              J'accueille adultes et adolescents dans mon cabinet situé à Lyon 6ème, pour les accompagner dans un parcours psychanalytique, une psychothérapie de soutien ou une psychothérapie analytique. Ensemble, nous explorerons votre psychisme pour dénouer les fils qui influencent vos pensées, vos émotions et vos comportements actuels. L'objectif est de vous permettre d'accéder à un mieux-être durable, en favorisant votre épanouissement personnel.
+              Au cœur de la thérapie, une relation de confiance se tisse entre le patient et le psychanalyste. C'est dans ce climat que vous pourrez explorer votre psyché en profondeur, sans crainte ni retenue. Je suis là pour vous accompagner à chaque étape de ce cheminement, en vous offrant un espace d'écoute attentive et bienveillante. Mon engagement est de vous guider avec respect, en veillant à ce que vous vous sentiez toujours à l'aise.
+            </p>
+          </div>
+        </div>
+        <div class="sm:px-6 lg:px-0">
+
+        </div>
+      </div>
+    </div>
+  </div>
+
 
   <div class="px-6 lg:px-8 bg-[#9ca48d60] h-full md:h-screen" id="infos">
     <div class="mx-auto max-w-8xl text-center h-full">
