--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <section class="flex flex-col w-full h-full z-10">
 
-  <div class="flex w-full h-screen justify-center items-center bg-[#9CA48D] md:pb-20" id="home">
+  <div class="flex w-full h-full md:h-screen justify-center items-center bg-[#9CA48D] md:pb-20" id="home">
     <div class="flex flex-col justify-center items-center w-full gap-10 bg-[#ded9d5] h-[90%] textured-background">
       <h2 class="an-1 text-4xl md:text-6xl font-bold tracking-tight headerName2">{{name}}</h2>
       <h3 class="an-1 text-xl font-medium">{{introduction}}</h3>
@@ -13,7 +13,7 @@
       <h2 class="text-2xl ml-40 font-bold tracking-tight sm:text-3xl">{{psyTitle}}</h2>
       <div class="mt-8 text-lg leading-8 text-justify bloc md:flex gap-10 justify-center">
         <div class="w-full md:w-1/2 m-auto">
-          <img src="{{officeImg}}" alt="office" class="rounded-xl">
+          <img src="{{homeImg}}" alt="office" class="rounded-xl">
         </div>
         <div class="w-full md:w-1/2 bg-[#474747] rounded-xl">
           <p class="text-justify text-white mx-4 my-4">
@@ -27,19 +27,24 @@
     </div>
   </div>
 
-  <div class="px-6 lg:px-8 bg-[#9ca48d96] h-full md:h-screen" id="psy">
-    <div class="mx-auto max-w-8xl text-center bg-[#F0ECE9] h-full md:h-[550px]">
-      <h2 class="text-2xl font-bold tracking-tight sm:text-3xl mr-72 pt-5">{{therapyst}}</h2>
-      <div class="mt-8 text-lg leading-8 text-justify bloc md:flex gap-10 justify-center max-w-6xl m-auto h-[80%]">
-        <div class="w-[90%] md:w-1/2 bg-[white] rounded-xl m-auto">
-          <p class="text-justify text-[#596551] mx-4 my-4">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque sint omnis ullam provident, error pariatur eum numquam repudiandae sapiente. Aspernatur, ducimus. Ullam amet hic quas et! Aliquid quo ullam culpa.
-            Aliquid debitis facere nulla, quo commodi magni, consequuntur esse alias fugiat mollitia quis provident repellat odit totam velit eligendi. Aut assumenda eligendi voluptatem magni ullam tempore laudantium ad possimus et.
-            Natus facere dolorum error dolor cupiditate sint fuga et incidunt, sed ut harum repellendus nulla ex ipsa quod sit! Culpa maxime magnam repudiandae cum eveniet aspernatur accusamus neque hic saepe?
-          </p>
+  <div class="px-6 lg:px-8 bg-[#9ca48d96] h-full lg:h-screen" id="psy">
+    <div class="mx-auto max-w-8xl text-center bg-[#F0ECE9] h-full md:h-auto">
+      <h2 class="text-2xl font-bold tracking-tight sm:text-3xl pt-5">{{therapyst}}</h2>
+      <div class="mt-8 text-lg leading-8 text-justify bloc xl:flex gap-10 justify-center w-[95%] m-auto">
+        <div class="grid-cols-2 flex md:w-2/3 rounded-xl m-auto mb-10">
+          <div class="w-[48%]">
+            <p class="text-justify text-[#596551] mx-4 my-4 text-xl font-bold">{{therapystInfos.intro1}}</p>
+            <p class="text-justify text-[#596551] mx-4 my-4">{{therapystInfos.text1}}</p>
+            <p class="text-justify text-[#596551] mx-4 my-4">{{therapystInfos.text2}}</p>
+          </div>
+          <div class="w-[52%]">
+            <p class="text-justify text-[#596551] mx-4 my-4 text-xl font-bold">{{therapystInfos.intro2}}</p>
+            <p class="text-justify text-[#596551] mx-4 my-4">{{therapystInfos.text4}}</p>
+            <p class="text-justify text-[#596551] mx-4 my-4">{{therapystInfos.text3}}</p>
+          </div>
         </div>
-        <div class="w-[90%] md:w-1/2 m-auto">
-          <img src="{{officeImg}}" alt="office" class="rounded-xl">
+        <div class="w-[90%] md:w-1/3 m-auto">
+          <img src="{{aliseeImg}}" alt="alisée" class="">
         </div>
       </div>
     </div>
